validate: 2026-01-30-gc-tuning-best-practices